# sc3nb

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini  write_synthdefs.scd
.github/workflows/: codeql-analysis.yml  docs.yml  main.yml
1.0.1/: CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTORS.html  README.html  genindex.html  index.html  info.html  py-modindex.html  resources.html  search.html  searchindex.js  supercolliderobjects.html  support.html
1.0.1/_modules/: index.html
1.0.1/_modules/sc3nb/: helpers.html  magics.html  process_handling.html  sc.html  sclang.html  timed_queue.html  util.html  version.html
1.0.1/_sources/: index.md.txt
1.0.1/autogen/notebooks/: helper-examples.html  helper-examples.ipynb  osc-communication-examples.html  osc-communication-examples.ipynb  sc3nb-examples.html  sc3nb-examples.ipynb  sclang-examples.html  sclang-examples.ipynb  timedqueue-examples.html
develop/: CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTORS.html  README.html  genindex.html  index.html  info.html  objects.inv  py-modindex.html  resources.html  search.html  searchindex.js  supercolliderobjects.html  support.html
develop/_modules/: index.html
develop/_modules/sc3nb/: helpers.html  magics.html  process_handling.html  sc.html  sclang.html  timed_queue.html  util.html
develop/_sources/: support.md.txt
develop/_static/: documentation_options.js
develop/autogen/notebooks/: helper-examples.html  helper-examples.ipynb  osc-communication-example.html  osc-communication-example.ipynb  osc-communication-examples.html  osc-communication-examples.ipynb  sc3nb-examples.html  sc3nb-examples.ipynb  sclang-examples.html  sclang-examples.ipynb  timedqueue-examples.html  timedqueue-examples.ipynb
docs/: generate.py
docs/source/: conf.py  index.rst  resources.md  supercolliderobjects.md
docs/source/_templates/: versions.html
examples/: TimedQueueSpawnTest.ipynb  buffer-examples.ipynb  groups-examples.ipynb  helper-examples.ipynb  osc-communication-example.ipynb  osc-communication-examples.ipynb  sc3nb-examples.ipynb  sc3nb-prototyping-in-jupyter-deprecated.ipynb  sc3nb-test1.ipynb  sc3nb-tests.ipynb  sclang-examples.ipynb  synth-examples.ipynb  timedqueue-examples.ipynb
examples/data/: iris.csv
examples/media/: score.osc
examples/supercollider-objects/: buffer-examples.ipynb  bus-examples.ipynb  node-examples.ipynb  recorder-examples.ipynb  score-examples.ipynb  server-examples.ipynb  synthdef-examples.ipynb
master/: CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTORS.html  README.html  genindex.html  index.html  info.html  py-modindex.html  resources.html  search.html  searchindex.js  supercolliderobjects.html  support.html
master/_modules/: index.html
master/_modules/sc3nb/: helpers.html  magics.html  process_handling.html  sc.html  sclang.html  timed_queue.html  util.html
master/_sources/: support.md.txt
master/autogen/notebooks/: helper-examples.html  helper-examples.ipynb  osc-communication-examples.html  osc-communication-examples.ipynb  sc3nb-examples.html  sc3nb-examples.ipynb  sclang-examples.html  sclang-examples.ipynb  timedqueue-examples.html  timedqueue-examples.ipynb
refactoring/: .buildinfo  CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTORS.html  README.html  genindex.html  index.html  info.html  objects.inv  py-modindex.html  resources.html  search.html  searchindex.js  supercolliderobjects.html  support.html
refactoring/.doctrees/: index.doctree  supercolliderobjects.doctree
refactoring/_modules/: index.html
refactoring/_modules/sc3nb/: helpers.html  magics.html  process_handling.html  sc.html  sclang.html  timed_queue.html
refactoring/_sources/: index.md.txt  index.rst.txt  supercolliderobjects.md.txt  supercolliderobjects.rst.txt
refactoring/_static/: documentation_options.js
refactoring/autogen/notebooks/: helper-examples.html  helper-examples.ipynb  osc-communication-example.html  osc-communication-example.ipynb  sc3nb-examples.html  sc3nb-examples.ipynb  sclang-examples.html  sclang-examples.ipynb  timedqueue-examples.html  timedqueue-examples.ipynb
sc3nb/: __init__.py  buffer.py  helpers.py  magics.py  node.py  osc_communication.py  parsing.py  process_handling.py  sc.py  sclang.py  synth.py  timed_queue.py  tools.py  udp.py
sc3nb/osc/: osc_communication.py  parsing.py
sc3nb/resources/: __init__.py  s2.scsyndef
sc3nb/resources/synthdefs/: pb-2ch.scsyndef  record-1ch.scsyndef  s1.scsyndef
sc3nb/sc_objects/: __init__.py  buffer.py  bus.py  node.py  recorder.py  server.py  synthdef.py  volume.py
sccode/: write_synthdefs.scd
src/sc3nb/: __init__.py  helpers.py  magics.py  process_handling.py  sc.py  sclang.py  timed_queue.py  util.py
src/sc3nb/osc/: __init__.py  osc_communication.py  parsing.py
src/sc3nb/resources/: __init__.py
src/sc3nb/sc_objects/: allocators.py  buffer.py  bus.py  node.py  recorder.py  score.py  server.py  (+2 more)
stable/: CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTORS.html  README.html  genindex.html  index.html  info.html  objects.inv  py-modindex.html  resources.html  search.html  searchindex.js  supercolliderobjects.html  support.html
stable/_modules/: index.html
stable/_sources/: support.md.txt
stable/_static/: documentation_options.js
tests/: conftest.py  test_buffer.py  test_bundler.py  test_group.py  test_helpers.py  test_node.py  test_osc.py  test_sc.py  test_sclang.py  test_score.py  test_server.py  test_synth.py  test_synth_with_sclang.py  test_volume.py
v1.0.2/: CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTORS.html  README.html  genindex.html  index.html  info.html  objects.inv  py-modindex.html  resources.html  search.html  searchindex.js  supercolliderobjects.html  support.html
v1.0.2/_modules/: index.html
v1.0.2/_sources/: info.md.txt
v1.1.0/: CHANGELOG.html  README.html  objects.inv  py-modindex.html
v1.1.0/_modules/: index.html
(+480 files in other folders)
