[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/sc3nb/version.py"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]
skip = ["__init__.py", ".tox"]

[tool.check-manifest]
ignore = [".travis.yml", "src/sc3nb/version.py"]

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
addopts = "--cov-report=term-missing"
testpaths = [
    "tests",
]
