[metadata]
name = sc3nb
url = https://github.com/interactive-sonification/sc3nb
author = Thomas Hermann
author_email = thermann@techfak.uni-bielefeld.de
classifiers =
    Programming Language :: Python :: 3
license = MIT
description = SuperCollider3 (sc3) for Python and Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sonification, sound synthesis
project_urls =
    Documentation = https://interactive-sonification.github.io/sc3nb
    Source Code = https://github.com/interactive-sonification/sc3nb
    Bug Tracker = https://github.com/interactive-sonification/sc3nb/issues

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    psutil
    python_osc>=1.7.4
    numpy>=1.15.4
    scipy>=1.3.1
    ipython>=7.2.0
    importlib_resources;python_version<'3.9'

[options.packages.find]
where = src

[options.extras_require]
test =
    tox

dev =
    pre-commit
    nbstripout
    check-manifest
    black
    isort

docs =
    Sphinx
    sphinx-autoapi
    sphinx-rtd-theme
    nbsphinx
    nbsphinx-link
    nbstripout
    numpydoc
    # execution of notebooks
    jupyterlab
    matplotlib
    PyQt5
    numpy
    pya;platform_system!='Windows' #  TODO if portaudio works on windows with pip we can include this again

localtest =
    pytest
    pytest-cov
    pytest-xvfb;sys_platform=='Linux'
