[metadata]
name = sc3nb
description = SuperCollider3 (sc3) for Python and Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/interactive-sonification/sc3nb
author = Thomas Hermann
author_email = thermann@techfak.uni-bielefeld.de
license = MIT
license_file = LICENSE
keywords = sonification, sound synthesis
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Other
    Operating System :: OS Independent
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://interactive-sonification.github.io/sc3nb
    Source Code = https://github.com/interactive-sonification/sc3nb
    Bug Tracker = https://github.com/interactive-sonification/sc3nb/issues

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    psutil
    python_osc>=1.7.4
    numpy>=1.15.4
    scipy>=1.3.1
    ipython>=7.2.0
    importlib_resources;python_version<'3.9'

[options.packages.find]
where = src

[options.extras_require]
test =
    tox

dev =
    pre-commit
    nbstripout
    check-manifest
    black
    isort

docs =
    Sphinx
    sphinx-autoapi
    sphinx-rtd-theme
    nbsphinx
    nbsphinx-link
    nbstripout
    numpydoc
    # execution of notebooks
    jupyterlab
    matplotlib
    PyQt5
    numpy
    pya;platform_system!='Windows' #  TODO if portaudio works on windows with pip we can include this again
    myst-parser
    GitPython

localtest =
    pytest
    pytest-cov
    pytest-xvfb;sys_platform=='linux'
    PyQt5;sys_platform=='linux'
    pytest-qt;sys_platform=='linux'
